CFT/sample-ec2.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "EC2 Free Tier t2.micro with Security Group",

  "Parameters": {
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Name of an existing KeyPair to SSH into EC2"
    }
  },

  "Mappings": {},

  "Resources": {
    "EC2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH and HTTP",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t2.micro",
        "KeyName": { "Ref": "KeyName" },
        "ImageId": {
          "Fn::Sub": "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}"
        },
        "SecurityGroupIds": [
          { "Ref": "EC2SecurityGroup" }
        ]
      }
    }
  },

  "Outputs": {
    "InstanceId": {
      "Description": "EC2 Instance ID",
      "Value": { "Ref": "EC2Instance" }
    },
    "PublicIP": {
      "Description": "Public IP of the EC2 instance",
      "Value": { "Fn::GetAtt": ["EC2Instance", "PublicIp"] }
    }
  }
}
